--- a/password_manager/pyproject.toml
+++ b/password_manager/pyproject.toml
@@ -7,10 +7,13 @@ authors = ["Iida Björn <iida.w.bjorn@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 invoke = "^1.7.0"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
 coverage = "^6.3.2"
+pylint = "^2.13.5"
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
